--- a/default.tex
+++ b/default.tex
@@ -41,7 +41,7 @@
 \pagestyle{fancy}
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
-\chead{\textbf{\normalsize{<++>}}}
+\chead{\textbf{\normalsize{Física I}}}
 \fancyhf[HL]{\includesvg[height=0.8\headheight]{Utec.svg}}
 \fancyfoot[C]{\textbf{\thepage}}
 \setlength{\headheight}{52pt}
@@ -49,13 +49,11 @@
 
 \graphicspath{ {ima/} }
 
-\title{\textbf{<++>}}
+\title{\textbf{Laboratorio}}
 %Aqui hay que poner a los autores
 \author{
 		Alberto Oporto Ames\\
-		\texttt{alberto.oporto@utec.edu.pe}\\
-		%\and <++>\\
-		%\texttt{<++>}\\
+		\texttt{alberto.oporto@utec.edu.pe}
 		}
 
 %Aquí empieza el documento
@@ -63,6 +61,12 @@
 \maketitle
 \thispagestyle{fancy}
 
-<++>
+\section{Dcl's}%
+\begin{figure}[H]
+	\centering
+	\includesvg[width=0.8\linewidth]{dcls.svg}
+\end{figure}
+
+\section{Preguntas}%
 
 \end{document}
