--- a/default.tex
+++ b/default.tex
@@ -10,8 +10,9 @@
 
 %Esto sirve para poner ecuaciones
 \usepackage{mathtools}
+\usepackage{cancel}
 
-%Esto sirve para poner imágenes
+%Esto sirve para poner imágenes {{{
 \usepackage{graphicx}
 \usepackage{svg}
 \usepackage{subcaption}
@@ -20,8 +21,10 @@
 \usepackage{pgfplots}
 
 \pgfplotsset{compat=1.16}
+\graphicspath{ {ima/} }
+%}}}
 
-%Colores de los links
+%Colores de los links {{{
 \definecolor{red}{HTML}{F22C40}
 \definecolor{green}{HTML}{5AB738}
 \definecolor{yellow}{HTML}{D5911A}
@@ -34,20 +37,20 @@
 	linkcolor=blue,
 	urlcolor=cyan,
 }
+%}}}
 
+%Esto controla a la cabecera {{{
 \usepackage{fancyhdr}
 
-%Esto controla a la cabecera
 \pagestyle{fancy}
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
-\chead{\textbf{\normalsize{Física I}}}
+\chead{ \textbf{\normalsize{Física I} }}
 \fancyhf[HL]{\includesvg[height=0.8\headheight]{Utec.svg}}
 \fancyfoot[C]{\textbf{\thepage}}
 \setlength{\headheight}{52pt}
 \setlength{\textheight}{700pt}
-
-\graphicspath{ {ima/} }
+%}}}
 
 \title{\textbf{Laboratorio}}
 %Aqui hay que poner a los autores
@@ -62,11 +65,46 @@
 \thispagestyle{fancy}
 
 \section{Dcl's}%
+\label{sub:dcl}
 \begin{figure}[H]
 	\centering
-	\includesvg[width=0.8\linewidth]{dcls.svg}
+	\includesvg[width=\linewidth]{dcls.svg}
 \end{figure}
 
 \section{Preguntas}%
+\subsection{Utilizando DINÁMICA, determinar teóricamente lo que debería medir el sensor.
+Respecto al tiempo, ¿qué tipo de curvas son? Explicar.}%
+\begin{align*}
+	m_p &= 0.1065 kg && \text{Masa del disco de inercia}\\
+	m_1 &= 1.0661 kg && \text{Masa del carrito}\\
+	m_2 &= 0.1 kg && \text{Masa en e portapesas}\\
+	r_1 &= 0.024 m && \text{Radio 1 de la polea}\\
+	r_2 &= 0.0145 m && \text{Radio 2 de la polea}\\
+	g &= 9.81 \frac{m}{s^2}  && \text{Gravedad}
+\end{align*}
+\begin{align*}
+	\frac{\alpha(2m_pr_2^2+m_1r_1^2)}{4r_2(g-r_2\alpha)} &= m_2\\
+	\alpha &= \frac{4r_2m_2g-4r_2^2m_2\alpha}{2m_pr_2^2+m_1r_1^2}\\
+	\alpha + \frac{4r_2^2m_2\alpha}{2m_pr_2^2+m_1r_1^2} &= \frac{4r_2m_2g}{2m_pr_2^2+m_1r_1^2}\\
+	\alpha \Big{(}1 + \frac{4r_2^2m_2}{2m_pr_2^2+m_1r_1^2}\Big{)} &= \frac{4r_2m_2g}{2m_pr_2^2+m_1r_1^2}\\
+	\alpha &= \frac{4r_2m_2g}{(2m_pr_2^2+m_1r_1^2)\Big{(}1 + \frac{4r_2^2m_2}{2m_pr_2^2+m_1r_1^2}\Big{)}}\\
+	\alpha &= 76.58 \frac{rad}{s^2}
+\end{align*}
+Constante.
+Porque no depende del tiempo.
+
+\subsection{A partir de la medición realizada, ¿se observan las curvas esperadas?}%
+
+\subsection{Comparar en valor de la aceleración promedio medida con el teórico. Comentar.}%
+
+\subsection{Utilizando  TRABAJO  Y  ENERGÍA,
+determinar  la  velocidad  final  de  la  masa  2 (m2).
+Esto quiere decir, un instante antes de detenerse la masa 1.}%
+
+\subsection{A partir de las mediciones realizadas,
+inferir el valor de la velocidad final de la masa 2.
+Compararlo con el valor teórico.
+Comentar.}%
+
 
 \end{document}
