--- a/default.tex
+++ b/default.tex
@@ -19,6 +19,7 @@
 
 \usepackage{float}
 \usepackage{pgfplots}
+\usetikzlibrary{spy, backgrounds}
 
 \pgfplotsset{compat=1.16}
 \graphicspath{ {ima/} }
@@ -77,7 +78,7 @@ Respecto al tiempo, ¿qué tipo de curvas son? Explicar.}%
 \begin{align*}
 	m_p &= 0.1065 kg && \text{Masa del disco de inercia}\\
 	m_1 &= 1.0661 kg && \text{Masa del carrito}\\
-	m_2 &= 0.1 kg && \text{Masa en e portapesas}\\
+	m_2 &= 0.1 kg && \text{Masa en el porta pesas}\\
 	r_1 &= 0.024 m && \text{Radio 1 de la polea}\\
 	r_2 &= 0.0145 m && \text{Radio 2 de la polea}\\
 	g &= 9.81 \frac{m}{s^2}  && \text{Gravedad}
@@ -94,6 +95,197 @@ Constante.
 Porque no depende del tiempo.
 
 \subsection{A partir de la medición realizada, ¿se observan las curvas esperadas?}%
+
+%Sin esta cosa pgfplots da errores. {{{
+\shorthandoff{"}
+%https://tex.stackexchange.com/questions/340661/argument-of-languageactivearg-has-an-extra-i-use-includegraphics-and-r/340663#340663
+
+%d=30cm{{{
+\begin{figure}[H]
+	\centering
+	\begin{tikzpicture}
+		% Opciones {{{
+		[
+			spy using outlines={rectangle,
+				magnification=2,
+				width=7cm,
+				height=3cm,
+				connect spies
+			}
+		]%}}}
+		\begin{axis}[
+			% Opciones {{{
+			width=0.9\linewidth,
+			height=6cm,
+			title=\textbf{$d=30cm$},
+			axis y line=left,
+			axis x line=bottom,
+			axis line style = ultra thick,
+			xlabel={Tiempo ($s$)},
+			ylabel={Aceleración angular ($\frac{rad}{s^2}$)},
+			ymajorgrids=true
+			]%}}}
+			\addplot[
+				% Opciones {{{
+				restrict x to domain=0:4,
+				draw opacity=0.1,
+				color=red,
+				smooth,
+				ultra thick
+				]%}}}
+				table
+				[
+					col sep=comma,
+					y index=3,
+					x index=0
+				]
+				{d1.csv};
+			\addplot[
+				% Opciones {{{
+				restrict x to domain=0.5:1.3,
+				color=red,
+				smooth,
+				ultra thick
+				]%}}}
+				table
+				[
+					col sep=comma,
+					y index=3,
+					x index=0
+				]
+				{d1.csv};
+			\coordinate (ripple) at (0.87,-50);
+			\coordinate (lupa) at (2.75,100);
+		\end{axis}
+		\spy[black] on (ripple) in node[fill=white] at (lupa);
+	\end{tikzpicture}
+\end{figure}%}}}
+
+%d=20cm{{{
+\begin{figure}[H]
+	\centering
+	\begin{tikzpicture}
+		% Opciones {{{
+		[
+			spy using outlines={rectangle,
+				magnification=2,
+				width=7cm,
+				height=3cm,
+				connect spies
+			}
+		]%}}}
+		\begin{axis}[
+			% Opciones {{{
+			width=0.9\linewidth,
+			height=6cm,
+			title=\textbf{$d=20cm$},
+			axis y line=left,
+			axis x line=bottom,
+			axis line style = ultra thick,
+			xlabel={Tiempo ($s$)},
+			ylabel={Aceleración angular ($\frac{rad}{s^2}$)},
+			ymajorgrids=true
+			]%}}}
+			\addplot[
+				% Opciones {{{
+				restrict x to domain=0:4,
+				draw opacity=0.1,
+				color=red,
+				smooth,
+				ultra thick
+				]%}}}
+				table
+				[
+					col sep=comma,
+					y index=3,
+					x index=0
+				]
+				{d2.csv};
+			\addplot[
+				% Opciones {{{
+				restrict x to domain=0.6:1.2,
+				color=red,
+				smooth,
+				ultra thick
+				]%}}}
+				table
+				[
+					col sep=comma,
+					y index=3,
+					x index=0
+				]
+				{d2.csv};
+			\coordinate (ripple) at (0.87,-50);
+			\coordinate (lupa) at (2.75,100);
+		\end{axis}
+		\spy[black] on (ripple) in node[fill=white] at (lupa);
+	\end{tikzpicture}
+\end{figure}%}}}
+
+%d=40cm{{{
+\begin{figure}[H]
+	\centering
+	\begin{tikzpicture}
+		% Opciones {{{
+		[
+			spy using outlines={rectangle,
+				magnification=1.8,
+				width=7.5cm,
+				height=3cm,
+				connect spies
+			}
+		]%}}}
+		\begin{axis}[
+			% Opciones {{{
+			width=0.9\linewidth,
+			height=6cm,
+			title=\textbf{$d=40cm$},
+			axis y line=left,
+			axis x line=bottom,
+			axis line style = ultra thick,
+			xlabel={Tiempo ($s$)},
+			ylabel={Aceleración angular ($\frac{rad}{s^2}$)},
+			ymajorgrids=true
+			]%}}}
+			\addplot[
+				% Opciones {{{
+				restrict x to domain=0:4,
+				draw opacity=0.1,
+				color=red,
+				smooth,
+				ultra thick
+				]%}}}
+				table
+				[
+					col sep=comma,
+					y index=3,
+					x index=0
+				]
+				{d3.csv};
+			\addplot[
+				% Opciones {{{
+				restrict x to domain=0.7:1.65,
+				color=red,
+				smooth,
+				ultra thick
+				]%}}}
+				table
+				[
+					col sep=comma,
+					y index=3,
+					x index=0
+				]
+				{d3.csv};
+			\coordinate (ripple) at (1.20,-100);
+			\coordinate (lupa) at (3,100);
+		\end{axis}
+		\spy[black] on (ripple) in node[fill=white] at (lupa);
+	\end{tikzpicture}
+\end{figure}%}}}
+\shorthandon{"}%}}}
+
+Casi.
+No son completamente rectas y al parecer el sensor estaba al revés.
 
 \subsection{Comparar en valor de la aceleración promedio medida con el teórico. Comentar.}%
 
