--- a/default.tex
+++ b/default.tex
@@ -123,7 +123,7 @@ Porque no depende del tiempo.
 			% Opciones {{{
 			width=0.9\linewidth,
 			height=6cm,
-			title=\textbf{$d=30cm$},
+			title=\textbf{$\alpha_1,\ d=30cm$},
 			axis y line=left,
 			axis x line=bottom,
 			axis line style = ultra thick,
@@ -184,7 +184,7 @@ Porque no depende del tiempo.
 			% Opciones {{{
 			width=0.9\linewidth,
 			height=6cm,
-			title=\textbf{$d=20cm$},
+			title=\textbf{$\alpha_2,\ d=20cm$},
 			axis y line=left,
 			axis x line=bottom,
 			axis line style = ultra thick,
@@ -245,7 +245,7 @@ Porque no depende del tiempo.
 			% Opciones {{{
 			width=0.9\linewidth,
 			height=6cm,
-			title=\textbf{$d=40cm$},
+			title=\textbf{$\alpha_3,\ d=40cm$},
 			axis y line=left,
 			axis x line=bottom,
 			axis line style = ultra thick,
@@ -392,6 +392,14 @@ En la prueba de la fórmula la masa $m_2$ estaba a la izquierda, mientras que en
 \subsection{Utilizando  TRABAJO  Y  ENERGÍA,
 determinar  la  velocidad  final  de  la  masa  2 (m2).
 Esto quiere decir, un instante antes de detenerse la masa 1.}%
+
+Distancia del carrito a la pared $d=0.4m$
+\begin{align*}
+	W &= d_2*\cancel{m_2}g*\cancel{\cos{0}} = \frac{1}{2} \cancel{m_2}v^2\\
+	v &= \sqrt{2d_2g} && d_2 =\frac{2d}{r_1}*r_2\\
+	v &= \sqrt{2\frac{0.8\cancel{m}}{0.024\cancel{m}}*0.0145m*9.81 \frac{m}{s^2} }\\
+	v &= 3.08\frac{m}{s^2}
+\end{align*}
 
 \subsection{A partir de las mediciones realizadas,
 inferir el valor de la velocidad final de la masa 2.
