--- a/default.tex
+++ b/default.tex
@@ -396,9 +396,9 @@ Esto quiere decir, un instante antes de detenerse la masa 1.}%
 Distancia del carrito a la pared $d=0.4m$
 \begin{align*}
 	W &= d_2*\cancel{m_2}g*\cancel{\cos{0}} = \frac{1}{2} \cancel{m_2}v^2\\
-	v &= \sqrt{2d_2g} && d_2 =\frac{2d}{r_1}*r_2\\
-	v &= \sqrt{2\frac{0.8\cancel{m}}{0.024\cancel{m}}*0.0145m*9.81 \frac{m}{s^2} }\\
-	v &= 3.08\frac{m}{s^2}
+	v_2 &= \sqrt{2d_2g} && d_2 =\frac{2d}{r_1}*r_2\\
+	v_2 &= \sqrt{2\frac{0.8\cancel{m}}{0.024\cancel{m}}*0.0145m*9.81 \frac{m}{s^2} }\\
+	v_2 &= 3.08\frac{m}{s^2}
 \end{align*}
 
 \subsection{A partir de las mediciones realizadas,
@@ -406,5 +406,92 @@ inferir el valor de la velocidad final de la masa 2.
 Compararlo con el valor teórico.
 Comentar.}%
 
+\shorthandoff{"}
+%d=40cm{{{
+\begin{figure}[H]
+	\centering
+	\begin{tikzpicture}
+		% Opciones {{{
+		[
+			spy using outlines={rectangle,
+				magnification=2,
+				width=7.5cm,
+				height=3cm,
+				connect spies
+			}
+		]%}}}
+		\begin{axis}[
+			% Opciones {{{
+			width=0.9\linewidth,
+			height=6cm,
+			title=\textbf{$v_2,\ d=40cm$},
+			axis y line=left,
+			axis x line=bottom,
+			axis line style = ultra thick,
+			xlabel={Tiempo ($s$)},
+			ylabel={Velocidad bloque 2 ($\frac{m}{s}$)},
+			ymajorgrids=true
+			]%}}}
+			\addplot[
+				% Opciones {{{
+				restrict x to domain=0:4,
+				draw opacity=0.1,
+				color=red,
+				smooth,
+				ultra thick
+				]%}}}
+				table
+				[
+					col sep=comma,
+					%y index=2,
+					y expr=\thisrowno{2}*0.0145,
+					x index=0
+				]
+				{d3.csv};
+			\addplot[
+				% Opciones {{{
+				restrict x to domain=0.6:1.75,
+				color=red,
+				smooth,
+				ultra thick
+				]%}}}
+				table
+				[
+					col sep=comma,
+					%y index=2,
+					y expr=\thisrowno{2}*0.0145,
+					x index=0
+				]
+				{d3.csv};
+			\addplot[
+				% Opciones {{{
+				restrict x to domain=1.71:1.75,
+				nodes near coords={
+				$(\pgfmathprintnumber{\pgfkeysvalueof{/data point/x}}s,
+				\pgfmathprintnumber{\pgfkeysvalueof{/data point/y}}\frac{m}{s^2})$},
+				nodes near coords align={above},
+				color=black,
+				smooth,
+				ultra thick
+				]%}}}
+				table
+				[
+					col sep=comma,
+					%y index=2,
+					y expr=\thisrowno{2}*0.0145,
+					x index=0
+				]
+				{d3.csv};
+			\coordinate (ripple) at (1.75,-0.72);
+			\coordinate (lupa) at (3,0);
+		\end{axis}
+		\spy[black] on (ripple) in node[fill=white] at (lupa);
+	\end{tikzpicture}
+\end{figure}%}}}
+\shorthandon{"}
+
+Me siento confundido.
+Es muy diferente al valor teórico.
+Además está invertido.
 
 \end{document}
